# REFRESH

./: .dockerignore  .gitignore  Dockerfile  README.md  clientApp.py  env_examples  job_recommender.py  lambda_function.py  nv_AI-powered Chatbot_QnA_websites.rtf  nv_chatbot_app.py  pyproject.toml  resume_coach_main.py  setup.md  start.sh  try.sh
Archive/: pyproject.toml
Archive/sagemaker/: FirstTestSageMakerModel.ipynb
data/: keep_chroma.md  lamda_Test_data0_Worked.json  lamda_Test_data1_Failed.json
docs/: MLOPS_STEPS.md  REFRESH_HighLevelArc.md  arc.md  job_recommender_arc.md  sequencediagram.md
examples/: .env.example  job_description.txt  job_description.txt.example  resume-tech.txt  resume.txt.example
run/: 1stSetup.sh  start.sh
static/: app.js  index.html  styles.css
templates/: index.html
test/: start.sh
