[tool.poetry]
name = "capstone"
version = "0.1.0"
description = "IK Capstone Project (Resume Coach)"
authors = ["Laxman", "Subhra", "Suresh"]

[tool.poetry.dependencies]
python = ">=3.10.0,<3.12"
langchain-openai = "^0.1.8"
python-dotenv = "^1.0.1"
langchain = "^0.2.1"
langchain-community = "^0.2.1"
langchain-chroma= "0.1.4"
#langchainhub = "^0.1.18"
#streamlit= "1.30.0"
#beautifulsoup4= "4.12.2"
#langchain-anthropic = "^0.1.15"
#langchain-google-genai = "^1.0.5"
#langchain-google-firestore = "^0.3.0"

[tool.pyright]
# https://github.com/microsoft/pyright/blob/main/docs/configuration.md
useLibraryCodeForTypes = true
exclude = [".cache"]

[tool.ruff]
# https://beta.ruff.rs/docs/configuration/
select = ['E', 'W', 'F', 'I', 'B', 'C4', 'ARG', 'SIM']
ignore = ['W291', 'W292', 'W293']

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api" 