[tool.poetry]
name = "REFRESH"
version = "2.2"
description = "IK Capstone Project (Resume Coach)"
authors = ["Laxman", "Subhra", "Suresh"]
exclude = ["sagemaker/*" , "Archive/*" , "data/*" , "examples/*"]

[tool.poetry.dependencies]
python = "^3.10"
python-dotenv = "^1.0.1"
langchain = "^0.3.13"
langchain-openai = "^0.2.14"
langchain-community = "^0.3.13"
langchain-ollama = "^0.2.2"
langchain-chroma = "^0.1.4"
Flask = "^3.1.0"
Flask-Cors = "^5.0.0"
gunicorn = "^23.0.0"
toml = "^0.10.2"
pandas = "^2.2.3"
pdfplumber = "^0.11.4"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
ruff = "^0.8.4"
pyright = "^1.1.391"

[tool.pyright]
# https://github.com/microsoft/pyright/blob/main/docs/configuration.md
useLibraryCodeForTypes = true
exclude = [".cache"]

[tool.ruff]
# https://beta.ruff.rs/docs/configuration/
select = ['E', 'W', 'F', 'I', 'B', 'C4', 'ARG', 'SIM']
ignore = ['W291', 'W292', 'W293']

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api" 
